--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,3 +1,4 @@
+---
 name: main
 on: [push, pull_request]
 
@@ -27,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [ jruby-9.3, jruby-9.4 ]
+        ruby: ['jruby-9.3', 'jruby-9.4']
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
