--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -8,7 +8,7 @@ jobs:
       ENDPOINT: http://localhost:8080
     strategy:
       matrix:
-        ruby: ['3.1', '3.2', '3.3']  # TODO: Webmock breaking build in 3.4
+        ruby: ['3.1', '3.2', '3.3', '3.4']
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
